@@ -14,6 +14,7 @@ ufw (0.24) jaunty; urgency=low
     we don't use the extra information anyway (LP: #289906)
   * fix translations for input strings (LP: #302426)
   * update ucf md5sums for before.rules and before6.rules
+  * adjust root/destructive tests for when we can't unmount /proc
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 12 Dec 2008 13:43:11 -0500
 
